--- a/style.css
+++ b/style.css
@@ -6,6 +6,32 @@ body{
 
 }
 
-nav {
+ul {
+	list-style-type: none;
+	margin: 0;
+	padding:0;
+	overflow: hidden;
+	background-color: #00173d;
+	position: fixed;
+	top: 0;
+	width: 100%;
+}
+li {
+	float: left;
+	border-right: 1px solid #bbb;
+}
+li a {
 	display: block;
+	color: white;
+	text-align: center;
+	padding: 14px 16px;
+	text-decoration: none;
+}
+
+li a:hover {
+	background-color: #7302c9;
+}
+
+li:last-child {
+	border-right: none;
 }
