--- a/style.css
+++ b/style.css
@@ -10,10 +10,11 @@ ul {
 	margin: 0;
 	padding:0;
 	overflow: hidden;
+	background-color: #00173d;
 	position: fixed;
 	top: 0;
 	width: 100%;
-
+	
 }
 li {
 	float: left;
