--- a/style.css
+++ b/style.css
@@ -7,10 +7,14 @@ body{
 
 p {
 	text-align:center;
+	margin-right: 20%;
+	margin-left: 20%;
 }
 
 h1 {
 	text-align:center;
+	margin-right: 20%;
+	margin-left: 20%;
 }
 
 img {
